--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/vue3": "^6.1.17",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.7.7",
-    "chart.js": "^4.4.7",
+    "chart.js": "^4.4.9",
+    "dayjs": "^1.11.13",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
+    "vue-chartjs": "^5.3.2",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
     "vuedraggable": "^4.1.0"
