--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/vue3": "^6.1.17",
     "@quasar/extras": "^1.16.4",
+    "@vueuse/motion": "^3.0.3",
     "axios": "^1.7.7",
     "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
