--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-chartjs": "^5.3.2",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^2.0.0",
